# GameBox

./: .gitignore  .gitmodules  Makefile  README.md  dependencies.txt
src/: CMakeLists.txt  gamebox.vala  resources.gresource.xml
src/GLib/Math/: Extensions.vala
src/GameBox/: Application.vala  BuildConfiguration.vala.in  CMakeLists.txt  Resources.vala  gamebox.vala
src/GameBox/Data/: CMakeLists.txt  DataStreamManager.vala  DataStreamManagerBase.vala  DataStreamReadableBase.vala  DataStreamWritableBase.vala  IDataStreamReadable.vala  IDataStreamWritable.vala
src/GameBox/Game/: CMakeLists.txt  Game.vala  Manager.vala
src/GameBox/UI/: Action.vala  ApplicationWindow.ui  ApplicationWindow.vala  CMakeLists.txt  GameMenuWindow.glade
src/GameBox/UI/Background/: AnimatedBackground.vala  Background.vala  Background.vala~  ImageBackground.vala
src/GameBox/UI/Widgets/: ActionItem.glade  ActionItem.vala  GameItem.glade  GameItem.vala
